# alpha_opt

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  vmec.json
alpha_opt/: __init__.py  constants.py  distributions.py  gen_f.py  gpu_tracing.py  gpu_tracing_example.py  libE.py  loss_times.py  mercier.py  objective.py  pca.py  profiles.py  sim_f.py  surface.py  usable_space.py
configs/: garabedian_linear.yaml  garabedian_linear_penalty.yaml  garabedian_linear_penalty_sweep.yaml  garabedian_linear_pressure.yaml  garabedian_linear_pressure_sweep.yaml  garabedian_linear_sp.yaml  garabedian_linear_sp_sweep.yaml  garabedian_linear_sweep.yaml  garabedian_qt.yaml  garabedian_qt_cei.yaml  garabedian_qt_cei_sweep.yaml  garabedian_qt_sweep.yaml
data/: 20260226-05_weighted_PCA_data.h5  20260303-02_prepare_weighted_Garabedian_data_conservative_noNfp2.h5  20260401-01_prepare_weighted_data_allNfp_Garabedian.h5  20260401-01_prepare_weighted_data_allNfp_PCA.h5  20260402-01_prepare_weighted_data_nfpAtLeast3_Garabedian.h5  20260402-01_prepare_weighted_data_nfpAtLeast3_PCA.h5  input.finite_beta  input.new_vmec  input.vmec  particle_data.csv  wout_circular_model_tokamak_finiteBeta_2xB_output.nc  wout_circular_model_tokamak_finiteBeta_2xSize_output.nc  wout_circular_model_tokamak_finiteBeta_output.nc
experiments/: botorch_optimize.py  case1_data.npz  case1_data_qt.npz  constraint.py  debug_trial16.py  diagnose_trial16.py  wandb_best_x_directional_cd.py  wandb_best_x_directional_fd.py  wandb_boundary_activation_check.py  wandb_boundary_seed_directional_cd.py  (+5 more)
(+46 files in other folders)
