[project]
name = "alpha_opt"
version = "0.0.1"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.16",
    "scipy>=1.3",
    "torch>=2.1.1",
    "botorch>=0.12.0",
    "wandb>=0.16",
    "matplotlib>=3.7",
    "notebook>=6.0",
    "ipywidgets>=8.1.1",
    "scikit-learn>=1.1",
    "pandas>=2.2",
    "vmecpp==0.5.4",
    "pyyaml>=6.0",
    "h5py==3.16.0",
    "pybind11>=2.13.6",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["alpha_opt"]